; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/bcm63xx/extr_early_printk.c_wait_xfered.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/bcm63xx/extr_early_printk.c_wait_xfered.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UART_IR_REG = common dso_local global i32 0, align 4
@UART_IR_TXEMPTY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @wait_xfered to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wait_xfered() #0 {
  %1 = alloca i32, align 4
  br label %2

2:                                                ; preds = %12, %0
  %3 = load i32, i32* @UART_IR_REG, align 4
  %4 = call i32 @bcm_uart0_readl(i32 %3)
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = load i32, i32* @UART_IR_TXEMPTY, align 4
  %7 = call i32 @UART_IR_STAT(i32 %6)
  %8 = and i32 %5, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %13

11:                                               ; preds = %2
  br label %12

12:                                               ; preds = %11
  br i1 true, label %2, label %13

13:                                               ; preds = %12, %10
  ret void
}

declare dso_local i32 @bcm_uart0_readl(i32) #1

declare dso_local i32 @UART_IR_STAT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
